--- a/argocd-apps/templates/traefik.yaml
+++ b/argocd-apps/templates/traefik.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   project: default
   source:
-    charts: traefik
+    chart: traefik
     repoURL: https://traefik.github.io/charts
     targetRevision: 26.0.0
     helm:
