--- a/argocd-apps/templates/argocd.yaml
+++ b/argocd-apps/templates/argocd.yaml
@@ -7,8 +7,8 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/arthurk/argocd-example-install.git
-    path: charts/argocd
+    repoURL: https://github.com/mruncleleon/poc-argocd-helm.git
+    path: argocd-apps/
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
