--- a/argocd-apps/templates/traefik.yaml
+++ b/argocd-apps/templates/traefik.yaml
@@ -7,11 +7,16 @@ metadata:
 spec:
   project: default
   source:
+  - repoURL: https://traefik.github.io/charts
     chart: traefik
-    repoURL: https://traefik.github.io/charts
     targetRevision: 26.0.0
     helm:
-      releaseName: traefik
+      valueFiles:
+      - $values/traefik/
+  - repoURL: https://github.com/mruncleleon/poc-argocd-helm.git
+    path: traefik/
+    targetRevision: HEAD
+    ref: values
   destination:
     server: https://kubernetes.default.svc
     namespace: default
