fix path to values.yaml

--- a/argocd-apps/templates/traefik.yaml
+++ b/argocd-apps/templates/traefik.yaml
@@ -12,7 +12,7 @@ spec:
     targetRevision: 26.0.0
     helm:
       valueFiles:
-      - $values/traefik/
+      - $values/values.yaml
   - repoURL: https://github.com/mruncleleon/poc-argocd-helm.git
     path: traefik/
     targetRevision: HEAD
