--- a/argocd-apps/templates/traefik.yaml
+++ b/argocd-apps/templates/traefik.yaml
@@ -12,9 +12,8 @@ spec:
     targetRevision: 26.0.0
     helm:
       valueFiles:
-      - $values/values.yaml
+      - $values/traefik/values.yaml
   - repoURL: https://github.com/mruncleleon/poc-argocd-helm.git
-    path: traefik/
     targetRevision: HEAD
     ref: values
   destination:
